src/components/Popup/Popup.scss
@import '../../mixins/themify.scss';

.devices {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  padding: 30px 0;
  backdrop-filter: blur(15px);
  display: flex;
  flex-direction: column;
  align-items: center;

  @include themify($themes) {
    background-color: themed('backgroundPopupColor');
  }
}

.devices__title {
  font-weight: 500;
  font-size: 23px;
  text-align: center;

  @include themify($themes) {
    color: themed('textColor');
  }
}

.devices__scan {
  border-radius: 5px;
  overflow: hidden;
  width: 95%;
}

.devices__scan>div {
  height: 4px;
  border-radius: 5px;
  width: 50%;
  transform: translateX(0%);
  animation: scan 1s infinite linear;

  @include themify($themes) {
    background: themed('elementActiveColor');
  }
}

.device:hover:after {
  display: block;
  content: '';
  position: absolute;
  top: -5px;
  right: -5px;
  bottom: -5px;
  left: -5px;
  border-radius: 12px;

  @include themify($themes) {
    border: 2px solid themed('elementActiveColor');
  }
}

@keyframes scan {
  0% {
    transform: translateX(-200%);
  }

  100% {
    transform: translateX(200%);
  }
}

